# ManimComposer

./: .gitignore  Project.md  README.md  TODO.md  gear_geometry.py  install.ps1  pyproject.toml
installer/: Install-ManimComposer.ps1  Uninstall-ManimComposer.ps1
manim_composer/: PLAN.md  latex_manager.py  main.py  main_window.ui  patches.py  requirements.txt  syntax_highlighter.py
manim_composer/codegen/: generator.py  parser.py
manim_composer/controllers/: properties_controller.py
manim_composer/models/: scene_state.py
manim_composer/views/canvas_items/: mathtex_item.py
